test/valid/ImplicitConstructorSuperTest/Ponto.plume
/**
 * Classe Ponto. 
 *
 * @author fc41625@alunos.fc.ul.pt F‡bio Botelho 
 * @version $id$ 
 */
 
 class Ponto extends Object is
 	field x : Integer  
 	
 		 
 